--- a/templates/views/main.hbs
+++ b/templates/views/main.hbs
@@ -1,7 +1,7 @@
 {{>header}}
 
 <title>My Space</title>
-<link rel="stylesheet" href="main.css">
+<link rel="stylesheet" href="/main.css">
 
 <body>
     {{>navbar}}
