--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -15,6 +15,6 @@
 
     {{!-- <link rel="stylesheet" href="../icons/bootstrap-icons.svg"> --}}
 
-  <link rel="stylesheet" href="./index.css">
+  <link rel="stylesheet" href="/index.css">
 
 </head>
