--- a/templates/views/content.hbs
+++ b/templates/views/content.hbs
@@ -1,12 +1,110 @@
 {{>header}}
 
 <title>Class</title>
-<link rel="stylesheet" href="./main.css">
+<link rel="stylesheet" href="/main.css">
 
 <body>
     {{>navbar}}
+    {{>symbols}}
 
-    <p>{{uid}}</p>
+    {{#if invalid}}
+    <div class="alert alert-danger d-flex align-items-center alert-dismissible fade show" role="alert">
+        <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Danger:">
+            <use xlink:href="#exclamation-triangle-fill" />
+        </svg>
+        <div>
+            Invalid Input.
+        </div>
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+    {{/if}}
+
+    {{#if removeAnnounce}}
+    <div class="alert alert-success d-flex align-items-center alert-dismissible fade show" role="alert">
+        <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Success:">
+            <use xlink:href="#check-circle-fill" />
+        </svg>
+        <div>
+            Announcement removed successfully.
+        </div>
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+    {{/if}}
+
+    {{!-- <p>{{uid}}</p> --}}
+    <div class="container-fluid d-flex flex-column flex-lg-row-reverse">
+        <div style="min-width:25%;height:30rem;" class="border border-dark overflow-auto my-3 mx-1">
+            <div class="d-flex justify-content-between align-items-center p-2 border border-dark"
+                style="background-color: rgba(0, 0, 0, 0.264);">
+                <div class="fs-4">Announcements</div>
+                <button type="button" class="btn btn-outline-primary btn-sm py-1 px-2" data-bs-toggle="modal"
+                    data-bs-target="#announcements"><i class="bi bi-pencil-fill"></i> Edit</button>
+            </div>
+            <div class="container-fluid my-1" style="text-align: justify;">
+                {{#each announce}}
+                <p>{{this.number}}. {{this.ann}}</p>
+                <br>
+                {{/each}}
+            </div>
+        </div>
+
+        <div class="p-2 bd-highlight border border-primary my-3 mx-1" style="min-width:75%;min-height:30rem">Notes</div>
+    </div>
+
+    <div class="modal fade" id="announcements" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="announcementModalLabel">Add Announcement</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <form class="row g-3" action="/announce/{{uid}}" method="POST">
+                        <div class="col-12">
+                            <label for="addAnnounce" class="form-label">Announcement :</label>
+                            <textarea class="form-control" id="addAnnounce" rows="2" name="announcement"></textarea>
+                        </div>
+                        <p class="text-center">To remove an announcement <a data-bs-toggle="modal"
+                                    data-bs-dismiss="modal" href="#remove">Click Here</a></p>
+                        <div class="modal-footer d-flex justify-content-center mx-auto w-100">
+                            <button type="submit" class="btn btn-primary w-50">Add</button>
+                        </div>
+                    </form>
+                </div>
+                {{!-- <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Save changes</button>
+                </div> --}}
+            </div>
+        </div>
+    </div>
+    <div class="modal fade" id="remove" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="removeannouncementModalLabel">Remove Announcement</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <form class="row g-3" action="/remove/{{uid}}" method="POST">
+                        <div class="col-12">
+                            <label for="removeAnnounce" class="form-label">Announcement No. :</label>
+                            <input type="number" class="form-control" id="removeAnnounce" rows="2" name="announcement" placeholder="For Ex. 2 -> Deletes the 2nd announcement"></input>
+                        </div>
+                        <p class="text-center">To add an announcement <a data-bs-toggle="modal"
+                                    data-bs-dismiss="modal" href="#announcements">Click Here</a></p>
+                        <div class="modal-footer d-flex justify-content-center mx-auto w-100">
+                            <button type="submit" class="btn btn-primary w-50">Remove</button>
+                        </div>
+                    </form>
+                </div>
+                {{!-- <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Save changes</button>
+                </div> --}}
+            </div>
+        </div>
+    </div>
 
     {{>footer}}
 </body>
