--- a/templates/partials/footer.hbs
+++ b/templates/partials/footer.hbs
@@ -1,14 +1,14 @@
 <footer class="footer mt-auto py-3 bg-dark">
           <div class="container d-flex flex-column justify-content-center align-items-center px-2">
             <div class="text-light fs-4 mb-3">
-              <a class="text-reset" href="#"><i class="bi bi-instagram px-2 hover data-bs-toggle=" tooltip" data-bs-placement="bottom"
-            title="Instagram""></i></a>
-              <a class="text-reset" href="#"><i class="bi bi-twitter px-2 hover data-bs-toggle=" tooltip" data-bs-placement="bottom"
-            title="Twitter""></i></a>
-              <a class="text-reset" href="#"><i class="bi bi-facebook px-2 hover data-bs-toggle=" tooltip" data-bs-placement="bottom"
-            title="Facebook""></i></a>
-              <a class="text-reset" href="#"><i class="bi bi-github px-2 hover data-bs-toggle=" tooltip" data-bs-placement="bottom"
-            title="GitHub""></i></a>
+              <a class="text-reset" href="https://www.instagram.com/itsharshit20/" target="_blank"><i class="bi bi-instagram px-2 hover" data-bs-toggle=" tooltip" data-bs-placement="bottom"
+            title="Instagram"></i></a>
+              <a class="text-reset" href="https://twitter.com/Harshit66058062" target="_blank"><i class="bi bi-twitter px-2 hover" data-bs-toggle=" tooltip" data-bs-placement="bottom"
+            title="Twitter"></i></a>
+              <a class="text-reset" href="https://www.linkedin.com/in/harshit-agarwal-38936a202/" target="_blank"><i class="bi bi-linkedin px-2 hover" data-bs-toggle=" tooltip" data-bs-placement="bottom"
+            title="Facebook"></i></a>
+              <a class="text-reset" href="https://github.com/harshitagarwal846" target="_blank"><i class="bi bi-github px-2 hover" data-bs-toggle=" tooltip" data-bs-placement="bottom"
+            title="GitHub"></i></a>
             </div>
             {{!-- <ul class="list-inline d-flex flex-wrap justify-content-center align-items-center">
                 <li class="list-inline-item text-light"><a class=" text-decoration-none text-reset" href="/">Home</a></li>
