--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -48,7 +48,7 @@
         <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" style="color: #0d6efd" id="staticBackdropLabel">Sign In</h5>
+                    <h5 class="modal-title bg-primary text-light d-inline-block p-2 rounded text-center w-50" id="staticBackdropLabel">Sign In</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
@@ -86,7 +86,7 @@
         <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" style="color: #0d6efd" id="staticBackdropLabel">Sign Up</h5>
+                    <h5 class="modal-title bg-primary text-light d-inline-block p-2 rounded text-center w-50" id="staticBackdropLabel">Sign Up</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
