--- a/public/main.css
+++ b/public/main.css
@@ -3,6 +3,12 @@
 }
 
 body{
+    /* background-image: linear-gradient(to right, #ffecd2 0%, #fcb69f 100%); */
+    /* background-image: linear-gradient(to top, #0c3483 0%, #a2b6df 100%, #6b8cce 100%, #a2b6df 100%); */
+    /* background-image: linear-gradient(to top, #f77062 0%, #fe5196 100%); */
+    background-color: #CDDCDC;
+    background-image: radial-gradient(at 50% 100%, rgba(255,255,255,0.50) 0%, rgba(0,0,0,0.50) 100%), linear-gradient(to bottom, rgba(255,255,255,0.25) 0%, rgba(0,0,0,0.25) 100%);
+    background-blend-mode: screen, overlay;
     display: flex;
     flex-direction: column;
     height: 100vh;
