--- a/templates/partials/navbar.hbs
+++ b/templates/partials/navbar.hbs
@@ -11,7 +11,7 @@
           <a class="nav-link" aria-current="page" href="/">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#about">About</a>
+          <a class="nav-link" href="/#about">About</a>
         </li>
 
 
@@ -33,7 +33,7 @@
         {{/if}}
 
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="#contact">Contact</a>
+          <a class="nav-link" aria-current="page" href="/#contact">Contact</a>
         </li>
       </ul>
 
