--- a/templates/partials/newspace.hbs
+++ b/templates/partials/newspace.hbs
@@ -3,7 +3,7 @@
   <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" style="color: #0d6efd" id="staticBackdropLabel">Join a new class</h5>
+        <h5 class="modal-title bg-primary text-light d-inline-block p-2 rounded text-center w-50" id="staticBackdropLabel">Join a new class</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
@@ -40,7 +40,7 @@
   <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" style="color: #0d6efd" id="staticBackdropLabel">Create new Class</h5>
+        <h5 class="modal-title bg-primary text-light d-inline-block p-2 rounded text-center w-50" id="staticBackdropLabel">Create new Class</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
