--- a/templates/views/main.hbs
+++ b/templates/views/main.hbs
@@ -3,6 +3,10 @@
 <title>My Space</title>
 <link rel="stylesheet" href="/main.css">
 
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
+
 <body>
     {{>navbar}}
     {{>symbols}}
@@ -18,15 +22,19 @@
         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
     {{/if}}
-    
+
 
     <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-xl-4 g-4 mx-1">
         {{#each classes}}
         <div class="col onhover" onclick="location.href='/main/{{this._id}}'">
-            <div class="card border-dark my-3" style="max-width: 20rem;min-height: 16rem">
-                <div class="card-header bg-danger border-dark text-light text-center fs-3 ">{{{this.name}}}</div>
+            <div class="card border-dark my-3"
+                style="max-width: 20rem;min-height: 16rem;font-family: 'Ubuntu', sans-serif;">
+                <div class="card-header border-dark text-light text-center fs-3"
+                    style="background-image: linear-gradient(to right, #3d99be 0%, #56317a 100%);">
+                    {{{this.name}}}
+                </div>
 
-                <div class="card-body">
+                <div class="card-body" style="background-image: linear-gradient(120deg, #fdfbfb 0%, #ebedee 100%);">
                     {{!-- <h5 class="card-title">Success card title</h5> --}}
                     {{#if this.description}}
                     <p class="card-text text-dark">{{{this.description}}}</p>
@@ -34,7 +42,7 @@
                     <p class="card-text text-muted">(No class description)</p>
                     {{/if}}
                 </div>
-                
+
             </div>
         </div>
         {{/each}}
