--- a/templates/partials/footer.hbs
+++ b/templates/partials/footer.hbs
@@ -17,6 +17,6 @@
                 <li class="list-inline-item text-light"><a class=" text-decoration-none text-reset" href="#">Join/Create Space</a></li>
                 <li class="list-inline-item text-light"><a class=" text-decoration-none text-reset" href="#contact">Contact</a></li>
             </ul> --}}
-            <p class="copyright text-light mb-0 fs-5">Harshit Agarwal © 2021</p>
+            <p class="copyright text-light mb-0 fs-5">Made with <span>&#128151;</span> by Harshit Agarwal</p>
           </div>
         </footer>
