--- a/public/index.css
+++ b/public/index.css
@@ -27,3 +27,7 @@ html{
 .hover:hover{
     color:rgba(255, 255, 255, 0.8)
 }
+
+.modal-content{
+    background-image: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
+}
