--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -43,12 +43,25 @@
     </div>
     {{/if}}
 
+    
+    {{#if invalid}}
+    <div class="alert alert-danger d-flex align-items-center alert-dismissible fade show" role="alert">
+        <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Danger:">
+            <use xlink:href="#exclamation-triangle-fill" />
+        </svg>
+        <div>
+            Invalid Credentials
+        </div>
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+    {{/if}}
+
     <div class="modal fade" id="signIn" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
         aria-labelledby="staticBackdropLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title bg-primary text-light d-inline-block p-2 rounded text-center w-50" id="staticBackdropLabel">Sign In</h5>
+                    <h5 class="modal-title bg-primary text-light d-inline-block p-2 rounded text-center w-25" id="staticBackdropLabel">Sign In</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
@@ -86,7 +99,7 @@
         <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title bg-primary text-light d-inline-block p-2 rounded text-center w-50" id="staticBackdropLabel">Sign Up</h5>
+                    <h5 class="modal-title bg-primary text-light d-inline-block p-2 rounded text-center w-25" id="staticBackdropLabel">Sign Up</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
@@ -179,17 +192,7 @@
                 <img src="images/about.jpg" class="img-fluid" alt="...">
             </div>
             <div class="flex-grow-1 my-2 px-2">
-                <p style="text-align:justify">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus iste
-                    maxime
-                    provident veritatis nihil! Itaque alias placeat eaque ut possimus atque aut, optio laborum officia
-                    ullam
-                    rem consequuntur odio, reprehenderit eum deleniti doloremque. Illo quo eveniet natus quam tempora,
-                    ducimus temporibus aperiam. Ipsam dolore ullam incidunt quas voluptatum commodi ab facilis, expedita
-                    excepturi quia doloribus harum libero nobis perspiciatis recusandae sunt officiis consequatur eaque
-                    porro quae exercitationem iste minus quam necessitatibus. Dignissimos impedit tenetur ratione
-                    veritatis
-                    ab asperiores eos cumque, vitae sunt reprehenderit nemo voluptas enim inventore facere, doloribus
-                    praesentium explicabo! Illo expedita aperiam rerum doloremque optio suscipit fuga fugit.</p>
+                <p style="text-align:justify">CollegeSpace is the perfect place to assemble all your resources. Whether managing a class or storing your notes, this website provides the perfect interface for it. CollegeSpace uses cookies to keep track of its users, removing the hassle of signing in regularly. Any number of spaces can be created consisting of multiple files. The person creating a class will be the admin by default and later can make other members admin too. Only an admin will be able to edit the class information, while it will be a read-only interface for the other users. The total number of users, along with the admins, will be visible to each class member. The admin will have the option to remove the class in case it is no longer required. However, this will result in the removal of the class altogether, i.e., no admin or member will be able to access it later. If one faces any problem, please submit the contact form below, and the developers will try to fix it as early as possible.</p>
             </div>
         </div>
     </div>
