added start script

--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -189,7 +189,7 @@
         <h1 id="about" class="text-md-start text-center fw-bold px-2" style="color: #0d6efd">About</h1>
         <div class="d-flex flex-column flex-md-row-reverse align-items-center my-4">
             <div class="flex-shrink-0 p-4">
-                <img src="images/about.jpg" class="img-fluid" alt="...">
+                <img src="images/about(1).jpg" class="img-fluid" style="max-width:20rem" alt="...">
             </div>
             <div class="flex-grow-1 my-2 px-2">
                 <p style="text-align:justify">CollegeSpace is the perfect place to assemble all your resources. Whether managing a class or storing your notes, this website provides the perfect interface for it. CollegeSpace uses cookies to keep track of its users, removing the hassle of signing in regularly. Any number of spaces can be created consisting of multiple files. The person creating a class will be the admin by default and later can make other members admin too. Only an admin will be able to edit the class information, while it will be a read-only interface for the other users. The total number of users, along with the admins, will be visible to each class member. The admin will have the option to remove the class in case it is no longer required. However, this will result in the removal of the class altogether, i.e., no admin or member will be able to access it later. If one faces any problem, please submit the contact form below, and the developers will try to fix it as early as possible.</p>
