--- a/templates/partials/navbar.hbs
+++ b/templates/partials/navbar.hbs
@@ -1,6 +1,6 @@
 <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
-    <a class="navbar-brand p-2" href="/">CollegeSpace</a>
+    <a class="navbar-brand p-2" style="font-family: 'Noticia Text', serif;" href="/">CollegeSpace</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
